--- a/practica_05.ipynb
+++ b/practica_05.ipynb
@@ -102,7 +102,23 @@
    "cell_type": "markdown",
    "id": "70dbec35-f1ea-4d30-bfc7-36d1d3bfd9a3",
    "metadata": {},
-   "source": []
+   "source": [
+    "3) Cargar función especifica del paquete:\n",
+    "\n",
+    "*from pandas import DataFrame*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "947b0d1a-311f-4865-b29f-3900943dc8e7",
+   "metadata": {},
+   "source": [
+    "Una funcion muy útil a la hora de trabajar con paquetes es:\n",
+    "\n",
+    "*pip show nombre_paquete*\n",
+    "\n",
+    "Con este comando tendremos acceso a la información principal del paquete, y lo importante es obtener el link de la página principal del mismo. De ahí obtendremos toda la información."
+   ]
   }
  ],
  "metadata": {
