--- a/practica_05.ipynb
+++ b/practica_05.ipynb
@@ -110,14 +110,68 @@
   },
   {
    "cell_type": "markdown",
+   "id": "36e80d1d-dde3-4215-8e64-273858177163",
+   "metadata": {},
+   "source": [
+    "## pip ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "947b0d1a-311f-4865-b29f-3900943dc8e7",
    "metadata": {},
    "source": [
-    "Una funcion muy útil a la hora de trabajar con paquetes es:\n",
+    "1) Una función muy útil a la hora de trabajar con paquetes es:\n",
     "\n",
     "*pip show nombre_paquete*\n",
     "\n",
     "Con este comando tendremos acceso a la información principal del paquete, y lo importante es obtener el link de la página principal del mismo. De ahí obtendremos toda la información."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f04ecdc-60c8-4fae-8aea-6281cc21d6dc",
+   "metadata": {},
+   "source": [
+    "2) Para buscar paquetes relacionados a un tema en particular se puede trabajar con el comando:\n",
+    "\n",
+    "*pip search tema_buscado*\n",
+    "\n",
+    "Con esto obtendremos una lista de paquetes con su respectiva aplicación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fc5e10f-709b-47ae-8bf7-a561301fb4c8",
+   "metadata": {},
+   "source": [
+    "3) Para mostrar todos los paquetes instalados en el entorno virtual podemos utilizar:\n",
+    "\n",
+    "*pip list*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3553da-4a94-4542-84ed-aa785481914f",
+   "metadata": {},
+   "source": [
+    "4) Para copiar un ambiente, guardarlo en un archivo .txt y luego instalarlo facilmente para otro ambiente diferente, es útil el comando:\n",
+    "\n",
+    "*pip freeze > requirements.txt*\n",
+    "\n",
+    "Con esto tendremos un documento de texto compatible con la función *pip install*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0df901a-03c7-4d4d-8c47-22aea614f37c",
+   "metadata": {},
+   "source": [
+    "Una vez que tengamos este archivo de texto, este puede instalarse facilmente con el comando:\n",
+    "\n",
+    "*pip install -r requirements.txt*\n",
+    "\n",
+    "Ahora el comando es \"install -r\"."
    ]
   }
  ],
