--- a/practica_05.ipynb
+++ b/practica_05.ipynb
@@ -171,7 +171,48 @@
     "\n",
     "*pip install -r requirements.txt*\n",
     "\n",
-    "Ahora el comando es \"install -r\"."
+    "Ahora el comando es \"install -r\". (1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a45fdef2-106d-4e5c-aed8-187d0f511bd9",
+   "metadata": {},
+   "source": [
+    "## Anaconda ## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6ab9dbe-83f3-4f6a-93a3-84b543214f17",
+   "metadata": {},
+   "source": [
+    "En anaconda podemos trabajar de dos maneras, una con la aplicación *Anaconda Navigator*, de donde directamente creamos un nuevo enviroment y desde ahí podemos, según el canal que elijamos, descargar los paquetes.\n",
+    "La otra forma es mediante *anaconda prompt*, la manera más fácil es crear el enviroment desde la aplicación *Anaconda Navigator* y luego desde anaconda prompt instalar los paquetes de la manera vista en (1)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b9ffb9-2b30-44ed-b864-0fa02ea09f06",
+   "metadata": {},
+   "source": [
+    "Luego de esto podemos activar el ambiente desde anaconda prompt, mediante *conda activate nombre_enviroment*. Despues nos situamos en la carpeta donde querramos trabajar con *cd desktop\\cd carpeta*, por ejemplo, y activamos Jupyter mediante el comando *jupyter-lab*. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08746b67-e041-430c-9769-760c0bb3e73c",
+   "metadata": {},
+   "source": [
+    "El anaconda prompt que utilizamos para abrir Jupyter Lab quedará ocupado realizando las veces de servidor entre nuestro equipo y la página de Jupyter Lab donde estemos trabajando, es por esto que para poder instalar los paquetes es necesario abrir un nuevo anaconda prompt, desde el cual activaremos el enviroment y estaremos listos para instalar todos los paquetes necearios ya sea con *pip* o mediante *conda install*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "763704e2-07e3-463f-9dcd-698a8eafafe7",
+   "metadata": {},
+   "source": [
+    "Para importar los paquetes necesarios para un enviroment en base a un archivo *.yml* debemos crear uno nuevo en *anaconda navigator* en *import*, nos pedirá un nombre para este ambiente y que seleccionemos el path del archivo.yml .\n"
    ]
   }
  ],
