--- a/practica_06.ipynb
+++ b/practica_06.ipynb
@@ -114,6 +114,282 @@
     "\n",
     "martin.edad"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8924b174-9fda-4e30-b956-a1636f2de1a6",
+   "metadata": {},
+   "source": [
+    "Los métods son acciones o funciones que puede realizar un objeto. Estos métodos dependen del tipo de objeto con el que estemos trabajando.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d10f0b-a6ab-4dbf-90c5-281d023497c7",
+   "metadata": {},
+   "source": [
+    "Los objetos en Python pueden ser de distintos tipos, cadena de caracteres, booleanos, números enteros, etc.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56dfa7f7-e267-4e8f-9522-ac49100498b7",
+   "metadata": {},
+   "source": [
+    "Por ejemplo, para los objetos tipo cadena de caracteres, tenemos *métodos* como:\n",
+    "- *capitalize()* Que convierte en mayúscula la primera letra de la cadena.\n",
+    "- *index()* Que busca determinado caracter en la cadena y devuelve su posición.\n",
+    "- *split()* Que divide la cadena según el separador que indiquemos y la convierte en una lista.\n",
+    "- *title()* Que convierte el primer caracter de cada palabra en mayúsculas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1d9dd1d-c36c-4dd8-ba8d-96171801abe8",
+   "metadata": {},
+   "source": [
+    "Para acceder a los métodos y propiedades de un objeto, Python utiliza una sintaxis muy simple: El nombre del objeto, seguido de punto y la propiedad o método al cuál se desea acceder. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8e6ebdb7-4980-4e1e-b3e3-7a9024d349c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoy Salgo De Gira Con Los Pibes\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1 = \"hoy salgo de gira con los pibes\"\n",
+    "\n",
+    "string_tit=string1.title()\n",
+    "print(string_tit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "73ddb080-7712-466f-ad50-06fc1719a726",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1.count(\"o\") #Cantidad de \"caracter\" en el string "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bade874b-0e26-42dd-bb92-e45514c336ec",
+   "metadata": {},
+   "source": [
+    "## Ejemplo ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c193654b-6650-492a-bcef-79d580dd8934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable = \"hola\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "471b7c9f-2236-472b-9b54-734a9c77e812",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Aplicamos una función a variable\n",
+    "len(variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7b88d48e-3e46-4800-b593-3229245231d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hola'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Aplicamos un método a variable\n",
+    "variable.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f96bd37-cf8c-4d54-8605-a990d8441733",
+   "metadata": {},
+   "source": [
+    "Otro ejemplo de función:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1f55c564-be8f-4624-819e-aefb92b8997d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operacion(a,b,c,d):\n",
+    "    r=((a+b)*(c))/d\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b572283b-6834-465d-8ce5-2c8af6a6860f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operacion(1,2,5,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d5a417e-ab57-4e0b-9ad5-66a269df8810",
+   "metadata": {},
+   "source": [
+    "En la función \"operación\" creamos la variable \"r\", la cual contiene el resultado de nuestra instrucción. Sin embargo, no podemos invocar \"r\" directamente, hay que designarla a un objeto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2f42bc3b-28ad-4a23-9b7f-6558a72e6947",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'r' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17404/1446074967.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#invocar r (error)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'r' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#invocar r (error)\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "acd583b9-211e-4917-93ea-ec40da8312f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ahora bien\n",
+    "resultado = operacion(1,2,3,5)\n",
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd106205-0a67-4e24-a99c-7c23da3a3cd7",
+   "metadata": {},
+   "source": [
+    "## Tarea ## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2247a07f-b5a7-4a62-9294-cae3b96d3b23",
+   "metadata": {},
+   "source": [
+    "1) Escribir una función que posea 3 argumentos y entregue la suma de los dos primeros, multiplicados por el tercer argumento. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "159d6a99-aa0c-42ec-81d9-407df15c0c5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def operacion(a,b,c):\n",
+    "    op=((a+b)*c)\n",
+    "    return op\n",
+    "\n",
+    "operacion(2,4,10)"
+   ]
   }
  ],
  "metadata": {
