--- a/practica_07.ipynb
+++ b/practica_07.ipynb
@@ -3712,6 +3712,94 @@
    "source": [
     "Así como existe to_csv, también podría ser to_json, to_html, to_xls, to_sql, etc."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bcf2f48-be1d-4c0d-b84d-1cf9d76dbe80",
+   "metadata": {},
+   "source": [
+    "## Tarea ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62215f87-4fc4-4510-9264-fd6eae051042",
+   "metadata": {},
+   "source": [
+    "Crear un data frame de 2 columnas y 3 filas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "e7ed88b9-ce93-484e-bb01-12b4bec65be9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>columna_1</th>\n",
+       "      <th>columna_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fila_1</td>\n",
+       "      <td>fila_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fila_2</td>\n",
+       "      <td>fila_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fila_3</td>\n",
+       "      <td>fila_3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  columna_1 columna_2\n",
+       "0    fila_1    fila_1\n",
+       "1    fila_2    fila_2\n",
+       "2    fila_3    fila_3"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "datos = {\"columna_1\":[\"fila_1\",\"fila_2\",\"fila_3\"],\"columna_2\":[\"fila_1\",\"fila_2\",\"fila_3\"]}\n",
+    "\n",
+    "df=pd.DataFrame(data = datos)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
